# uczenie-maszynowe

./: README.md  requirements.txt
lab1/: Lab1_zadania.pptx  ZadanieGr34.docx  california_housing.ows
lab2/: task.txt
ml_time_series_forecasting_course_renamed/: LICENSE  README.md  pyproject.toml  requirements.txt
ml_time_series_forecasting_course_renamed/lab1_statistical_models/: notebook_empty.ipynb  polish_inflation.csv
ml_time_series_forecasting_course_renamed/lab2_neural_models/: notebook_empty.ipynb
ml_time_series_forecasting_course_renamed/lab2_neural_models/lightning_logs/version_0/: events.out.tfevents.1766230119.Q-C36WK75NHQ-jwasieleski
ml_time_series_forecasting_course_renamed/lab2_neural_models/lightning_logs/version_1/: events.out.tfevents.1766230134.Q-C36WK75NHQ-jwasieleski  hparams.yaml
ml_time_series_forecasting_course_renamed/lab2_neural_models/lightning_logs/version_10/: events.out.tfevents.1766230200.Q-C36WK75NHQ-jwasieleski
ml_time_series_forecasting_course_renamed/lab2_neural_models/lightning_logs/version_11/: events.out.tfevents.1766230217.Q-C36WK75NHQ-jwasieleski
ml_time_series_forecasting_course_renamed/lab2_neural_models/lightning_logs/version_12/: events.out.tfevents.1766230217.Q-C36WK75NHQ-jwasieleski  hparams.yaml
ml_time_series_forecasting_course_renamed/lab2_neural_models/lightning_logs/version_13/: events.out.tfevents.1766230239.Q-C36WK75NHQ-jwasieleski
ml_time_series_forecasting_course_renamed/lab2_neural_models/lightning_logs/version_14/: events.out.tfevents.1766230239.Q-C36WK75NHQ-jwasieleski  hparams.yaml
(+69 files in other folders)
